--- a/_posts/data-analysis-reuse/data-analysis-reuse.Rmd
+++ b/_posts/data-analysis-reuse/data-analysis-reuse.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Patterns and anti-patterns of data analysis reuse"
 description: |
-  "A speed-run through four stages of data analysis reuse, to the end game you probably guessed was coming."
+  A speed-run through four stages of data analysis reuse, to the end game you probably guessed was coming.
 author:
   - name: Miles McBain
     url: https://milesmcbain.com
