--- a/_posts/data-analysis-reuse/data-analysis-reuse.Rmd
+++ b/_posts/data-analysis-reuse/data-analysis-reuse.Rmd
@@ -80,7 +80,7 @@ There are several ways this can happen. Here's a scenario.
 
 The client really liked the dynamics evident in the event stream plot on
 project BLUE. So for project ORANGE it's only natural to pull that plot and
-it's data processing dependencies in via copy-paste.
+its data processing dependencies in via copy-paste.
 
 ```{r, fig.cap = "A copy of a data analysis directory is made."}
 knitr::include_graphics("copy1.png")
